--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "framer-motion": "^10.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "windups": "^1.2.2"
